--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Document</title>
 <style>
-      .main_container{
+          .main_container{
           width: 100px;
           height: 100px;
           position: relative;
@@ -15,45 +15,14 @@
       }
       @keyframes circle {
           from{
-                    left: 20px;
-          
+                    left: 20vw;
           }
           to{
-                    left: 1000px;
+                    left: 50vw;
                     background-color: white;
           }
       }
-      @media screen and(width:390px) {
-        .main_container{
-          width: 100px;
-          height: 100px;
-          position: relative;
-          border-radius: 50%;
-          background-color: red;
-          animation:circle 4s ease  infinite alternate-reverse ;
-        }
-      }
-      @media screen and(height:844px) {
-        .main_container{
-          width: 100px;
-          height: 100px;
-          position: relative;
-          border-radius: 50%;
-          background-color: red;
-          animation:circle 4s ease  infinite alternate-reverse ;
-        }
-      }
-      @media screen and(width:412px){
-        .main_container{
-          width: 100px;
-          height: 100px;
-          position: relative;
-          border-radius: 50%;
-          background-color: red;
-          animation:circle 4s ease  infinite alternate-reverse ;
-        }
-      }
-      @media screen and(height:914px){
+      @media screen and(max-width:390px) {
         .main_container{
           width: 100px;
           height: 100px;
